[gd_scene load_steps=23 format=3 uid="uid://dtoa1mfxryx0c"]

[ext_resource type="Script" uid="uid://nnqtis7t5gq0" path="res://src/player/player.gd" id="1_0sqbu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mf2ua"]
radius = 15.0
height = 42.0

[sub_resource type="Gradient" id="Gradient_rxibo"]
offsets = PackedFloat32Array(0.130233, 0.573256, 1)
colors = PackedColorArray(0.91391, 0.799839, 0.744868, 1, 0.913549, 0.669266, 0.920077, 0.488636, 0.627283, 0.654825, 0.857961, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mf2ua"]
gradient = SubResource("Gradient_rxibo")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.99, 0.5)

[sub_resource type="Animation" id="Animation_rxibo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_k60ra"]
resource_name = "attach"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, 16)]
}

[sub_resource type="Animation" id="Animation_o822w"]
resource_name = "back"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_244u8"]
resource_name = "charge"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a4vah"]
resource_name = "dettach"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(2, 4), Vector2i(1, 4), Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 16), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mf2ua"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l271a"]
resource_name = "strafe_left"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_x42xx"]
resource_name = "strafe_right"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5f2sf"]
resource_name = "thrust"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jiejy"]
resource_name = "thrust_to_idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_244u8"]
_data = {
&"RESET": SubResource("Animation_rxibo"),
&"attach": SubResource("Animation_k60ra"),
&"back": SubResource("Animation_o822w"),
&"charge": SubResource("Animation_244u8"),
&"dettach": SubResource("Animation_a4vah"),
&"idle": SubResource("Animation_mf2ua"),
&"strafe_left": SubResource("Animation_l271a"),
&"strafe_right": SubResource("Animation_x42xx"),
&"thrust": SubResource("Animation_5f2sf"),
&"thrust_to_idle": SubResource("Animation_jiejy")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jcdrv"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hja65"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5efpn"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4uy46"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5shm8"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hrerp"]
streams_count = 3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_j2873"]
streams_count = 4

[node name="Player" type="RigidBody2D"]
collision_layer = 16
gravity_scale = 0.05
inertia = 1.0
lock_rotation = true
linear_damp = 1.0
angular_damp = 2.0
script = ExtResource("1_0sqbu")
thrust = 300.0

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
hframes = 7
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mf2ua")

[node name="ThrustTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.865036, 0.777754, 0.805672, 1)
texture = SubResource("GradientTexture2D_mf2ua")
texture_scale = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_244u8")
}

[node name="sfx" type="Node2D" parent="."]

[node name="charge_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_jcdrv")
volume_db = -10.0
bus = &"Sfx"

[node name="tap_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_hja65")
volume_db = -10.0
bus = &"Sfx"

[node name="krill_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_5efpn")
volume_db = -10.0
bus = &"Sfx"

[node name="hurt_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_4uy46")
volume_db = -10.0
bus = &"Sfx"

[node name="thrust_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_5shm8")
volume_db = -10.0
bus = &"Sfx"

[node name="enter_current_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_hrerp")
volume_db = -10.0
bus = &"Sfx"

[node name="loop_current_sfx" type="AudioStreamPlayer2D" parent="sfx"]
volume_db = -10.0
bus = &"Sfx"

[node name="ruffle_sfx" type="AudioStreamPlayer2D" parent="sfx"]
stream = SubResource("AudioStreamRandomizer_j2873")
bus = &"Sfx"

[connection signal="timeout" from="ThrustTimer" to="." method="_on_thrust_timer_timeout"]
